css/style.css
body {
    font-family: Arial, sans-serif;
    color:#ffffff;
    text-align: center;
    font-size: 1em;
    margin: 2px;
    padding: 2px;
    background-image: url('../img/bg_sky3.png');
    background-size: cover;
    background-position: center center;
    background-attachment: fixed;
}

.bold {
    font-weight: bold;
}

#title {
    font-family: 'Noto Sans JP', sans-serif;
    font-size: 3em;
    text-align: center;
    margin: 0.3em;
    padding-bottom: 2%;
    text-shadow: #005064 1px 2px;
}

#web_site_description,
h2 {
    margin-top: 10px;
    text-align: center;
}

#city_name {
    text-align: center;
    font-size: 200%;
}

/* Cadre de recherche */
#search_framework {
    background-color: rgba(0, 30, 39, 0.3);
    margin-right: auto;
    margin-left: auto;
    padding: 10px;
    padding-bottom: 15px;
    margin-bottom: 2%;
    border: 2px solid #ffffff;
    border-radius: 10px;
}

/* Conteneur pour le label et l'input */
#input-group {
    margin-bottom: 17px;
    display: flex;
    align-items: center;
    justify-content: center; 
    flex-wrap: wrap;
}

#label_style {
    font-size: 1em;
    flex-shrink: 0;
    margin-right: 1%;
    margin-bottom: 10px;
}

#postal_code {
    width: 13em;
    box-sizing: border-box;
    padding: 6px;
    font-size: 1em;
    text-align: center;
    margin-top: -10px;
    background-color: #03618d;
    color: #ffffff;
    border: solid white 4px;
    border-radius: 20px;
}

#postal_code::placeholder {
    color: #dfdfdf;
}

#postal_code[type="number"]::-webkit-inner-spin-button {
    display: none;
 }

 /* Fallback for other browsers */
 #postal_code[type="number"] {
    appearance: textfield;
    -moz-appearance: textfield;
    -webkit-appearance: textfield;
 }

#drop_down_list {
    margin-bottom: 10px;
    display: flex;
    box-sizing: border-box;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
}

#city_select {
    width: fit-content;
    box-sizing: border-box;
    text-align: center;
    padding: 6px;
    font-size: 1em;
    margin-top: -10px;
    color:rgb(9, 135, 214);
    background-color: #03618d;
    color: white;
    border: solid white 4px;
    border-radius: 20px;
    cursor : pointer;
}

#searchBtn {
    background-color: grey;
    color: #fff;
    padding: 12px 20px;
    border: none;
    font-size: 1em;
    border-radius: 5px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 10px;
    cursor: not-allowed;
    transition: all 0.4s;
    border: solid white 4px;
    border-radius: 20px;
}

#errorWarning {
    color: #ff0000;
    margin-left: auto;
    margin-right: auto;
    width: fit-content;
    display: none;
    opacity: 0;
    
}

@keyframes moveAndGrow {
    0% {
        transform: translateY(0px);
        transform: scale(1);
    }

    50% {
        transform: translateY(2px);
        transform: scale(1.1);
    }

    100% {
        transform: translateY(0);
        transform: scale(1);
    }
}

#p_error {
    margin-top: 0;
    animation: moveAndGrow 2s ease-in-out infinite;
}

#dropDownCardChild {
    background-color: rgba(0, 30, 39, 0.3);
    margin-right: auto;
    margin-left: auto;
    padding: 10px;
    padding-bottom: 15px;
    border: 2px solid #ffffff;
    border-radius: 10px;
    grid-template-rows: 1fr 1fr;
    grid-template-columns: 1fr 1fr;
    gap: 10px;
}

#day {
    font-size: 1.5em;
    color:#ffffff;
}

#city_selected {
    color:#ffffff;
    font-size: 1.4em;
    margin-top: -5px;
}

#icon_weather {
    font-size: 4em;
    margin-right: auto;
    margin-left: auto;
    margin-bottom: 10px;
    margin-top: -5px;
}

#actual_weather {
    color:#ffffff;
    font-size: 1.2em;
}

#temp_min, #temp_max, #sun_time, #raining_pourcentage {
    padding: 1px;
    width: 40%;
}

#temp_min, #temp_max {
    grid-row: 1;
}

#sun_time, #raining_pourcentage {
    grid-row: 2;
}

#temp_min {
    margin-left: 10%;
}
    
#temp_max {
    margin-right: 10%;
}

.temperature {
    width: 100%;
    display: flex;
}

#temperature_min {
    color: #24e5ff;
    font-size: 1.3em;
    font-weight: bold;
    margin-left: -5px;
}

#temperature_max {
    color: #fd6464;
    font-size: 1.3em;
    font-weight: bold;
    margin-left: -5px;
}

#sun_and_rain {
    margin-left: 10%;
    width: 100%;
    display: flex;
}

#sun_time {
    color: #ffe75f;
    font-size: 1em;
}

#sun_time_value {
    color: #ffe75f;
    font-size: 1.3em;
}

#raining_pourcentage {
    margin-right: 10%;
    color: #c7d8fa;
    font-size: 1em;
}

#raining_pourcentage_value {
    color: #c7d8fa;
    font-size: 1.3em;
}

i {
    margin-right: 5px;
}

span {
    margin-left: 10px;
    color: #999;
    font-weight: 300;
    font-size: 0.9em;
}

h3 {
    font-size: 1em;
    float: left;
    color: #777;
    font-weight: 400;
    text-align: center;
    width: 100%;
}

.actualisation {
    color:black;
    font-size: 1em;
    text-align: right;
    padding-right: 5%;
}

img {
    width: 100px;
    height: 100px;
    border-radius: 50%;
    margin: 0 auto;
    display: block;
    margin-top: 10px;
}

@media (min-width: 2001px) {
    body {
        font-size: 1.7em;
    }

    #title {
        font-size: 5em;
    }

    /* Cadre de recherche */
    #search_framework {
        width: 65%;
    }
    
    h2 {
        font-size: 2.5em;
    }

    #dropDownCardChild {
        width: 40%;
    }
}

@media (min-width: 1440px) and (max-width: 2000px) {
    #title {
        font-size: 4em;
    }

    /* Cadre de recherche */
    #search_framework {
        width: 65%;
    }
    
    h2 {
        font-size: 2.1em;
    }

    #dropDownCardChild {
        width: 40%;
    }
}

@media (min-width: 1024px) and (max-width: 1439px) {
    #title {
        font-size: 3.5em;
    }

    /* Cadre de recherche */
    #search_framework {
        width: 70%;
    }

    h2 {
        font-size: 1.8em;
    }

    #dropDownCardChild {
        width: 40%;
    }
}

@media (min-width: 768px) and (max-width: 1023px) {
    #title {
        font-size: 3.3em;
    }

    /* Cadre de recherche */
    #search_framework {
        width: 80%;
    }
    
    h2 {
        font-size: 1.6em;
    }

    #dropDownCardChild {
        width: 50%;
    }
}

@media (min-width: 425px) and (max-width: 767px) {
    #title {
        font-size: 2.8em;
    }

    /* Cadre de recherche */
    #search_framework {
        width: 85%;
    }
    
    h2 {
        font-size: 1.3em;
    }

    #dropDownCardChild {
        width: 85%;
    }

    #actualisation {
        text-align: center;
        padding-right: 0%;
    }

    #sun_time {
        font-size: 0.9em;
    }
    
    #sun_time_value {
        font-size: 1.1em;
    }
    
    #raining_pourcentage {
        font-size: 0.9em;
    }
    
    #raining_pourcentage_value {
        font-size: 1.1em;
    }

}

@media (min-width: 375px) and (max-width: 424px) {
    #title {
        font-size: 2.4em;
    }

    /* Cadre de recherche */
    #search_framework {
        width: 90%;
    }
    
    h2 {
        font-size: 1.2em;
    }

    #dropDownCardChild {
        width: 90%;
    }

    #actualisation {
        text-align: center;
        padding-right: 0%;
    }

    #sun_time {
        font-size: 0.85em;
    }
    
    #sun_time_value {
        font-size: 1.1em;
    }
    
    #raining_pourcentage {
        font-size: 0.85em;
    }
    
    #raining_pourcentage_value {
        font-size: 1.1em;
    }
}

@media (min-width: 320px) and (max-width: 374px) {
    #title {
        font-size: 2.2em;
    }

    h2 {
        font-size: 1.08em;
    }

    #actualisation {
        text-align: center;
        padding-right: 0%;
    }

    #sun_time {
        font-size: 0.8em;
    }
    
    #sun_time_value {
        font-size: 1.1em;
    }
    
    #raining_pourcentage {
        font-size: 0.8em;
    }
    
    #raining_pourcentage_value {
        font-size: 1.1em;
    }
}

